# value-forecasting

./: .gitignore  README.md  STATUS.md  myst.yml  pyproject.toml
.beads/: deletions.jsonl  issues.jsonl
.claude/: CLAUDE.md
.github/workflows/: ci.yml
app/: package.json
app/src/: App.css  App.tsx
app/src/data/: baseline_forecasts.json  forecasts.ts
data/: baseline_forecasts.json  calibration_gpt-4o_2021_2024.json  experiment_gpt-3.5-turbo-instruct_2010_2024.json  longterm_gpt-4o_calibrated.json  trajectories.json
docs/: index.md  methodology.md  results.md
paper/: 01-introduction.md  02-related-work.md  03-methods.md  04-results.md  05-discussion.md  06-conclusion.md  07-appendix.md  myst.yml  references.bib
scripts/: calibrated_forecast.py  extract_gss_time_series.py  extract_gss_trajectories.py  generate_app_data.py  generate_baseline_forecasts.py  run_forecast_experiment.py
src/value_forecasting/: __init__.py  baselines.py  calibration.py  evaluation.py  forecaster.py  gss_variables.py  heterogeneity.py  models.py  run_experiment.py
tests/: __init__.py  test_baselines.py  test_calibration.py  test_evaluation.py  test_forecaster.py  test_gss_variables.py  test_heterogeneity.py  test_models.py
